--- a/app/assets/style/style.css
+++ b/app/assets/style/style.css
@@ -1,14 +1,32 @@
+html,
+body {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
 * {
     font-family: Arial, Helvetica, sans-serif;
     color: #333;
     box-sizing: border-box;
 }
 
-html,
-body {
-    height: 100%;
-    padding: 0;
-    margin: 0;
+h3 {
+    color: #e5e5e5;
+}
+
+a h3:hover{
+    color: #fff;
+}
+
+a {
+    text-decoration: none;
+}
+
+.wrapper {
+    min-width: 1050px;
+    min-height: 100%;
+    background-color: #141414;
 }
 
 .signInContainer {
@@ -24,35 +42,15 @@ body {
     min-height: 300px;
     max-height: 100%;
     width: 450px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0 1px 2px;
+    box-shadow: rgba(0,0,0, 0.1) 0 1px 2px;
     padding: 20px 35px;
     overflow-y: auto;
-}
-
-.column img {
-    width: 125px;
-}
-
-.column .header {
-    padding: 20px 0;
-}
-
-.column .header h3 {
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 32px;
-    margin: 0;
-    padding-top: 16px;
-    color: #000;
-}
-
-.column .header span {
-    font-size: 14px;
 }
 
 .column form {
     display: flex;
     flex-direction: column;
+    padding-top: 24px;
 }
 
 .column form input[type="text"],
@@ -77,6 +75,27 @@ body {
     font-size: 16px;
 }
 
+.column .header {
+    padding: 20px 0;
+}
+
+.column h3 {
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 32px;
+    margin: 0;
+    padding-top: 16px;
+    color: #000;
+}
+
+.column .header span {
+    font-size: 14px;
+}
+
+.column .header img {
+    width: 100px;
+}
+
 .signInMessage {
     font-size: 14px;
     font-weight: 400;
@@ -90,23 +109,43 @@ body {
     text-align: center;
 }
 
+.previewImage,
+.previewVideo {
+    width: 100%;
+}
+
 .previewContainer {
     position: relative;
     display: flex;
 }
 
-.previewImage, .previewVideo {
+.previewContainer.small {
+    width: 230px;
+    height: 129px;
+    margin-right: 4px;
+    display: inline-flex;
+}
+
+.previewContainer.small img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .previewOverlay {
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0,0,0,0.3);
     position: absolute;
 }
 
-.mainDetails {
+.previewOverlay .mainDetails h3 {
+    color: #fff;
+    font-size: 40px;
+    margin: 15px 0;
+}
+
+.previewOverlay .mainDetails {
     position: relative;
     top: 35%;
     margin-left: 50px;
@@ -114,15 +153,9 @@ body {
     flex-direction: column;
 }
 
-.mainDetails h3 {
-    color: #fff;
-    font-size: 40px;
-    margin: 15px 0;
-}
-
 .mainDetails button {
-    background-color: rgba(51, 51, 51, 0.4);
-    color:#fff;
+    background-color: rgba(51,51,51,0.4);
+    color: #fff;
     border: none;
     min-width: 150px;
     padding: 0 38px;
@@ -142,4 +175,16 @@ button i {
 .mainDetails button:hover {
     background-color: #e6e6e6;
     color: #000;
+}
+
+.category {
+    display: flex;
+    flex-direction: column;
+    padding: 10px 0;
+}
+
+.entities {
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
 }
