--- a/app/assets/style/style.css
+++ b/app/assets/style/style.css
@@ -145,6 +145,12 @@ a {
     margin: 15px 0;
 }
 
+.previewOverlay .mainDetails h4 {
+    color: #fff;
+    font-size: 20px;
+    margin: 15px 0;
+}
+
 .previewOverlay .mainDetails {
     position: relative;
     top: 35%;
@@ -218,6 +224,7 @@ button i {
     display: flex;
     flex-direction: column;
     width: 230px;
+    position: relative;
 }
 
 .episodeContainer img {
@@ -267,3 +274,28 @@ button i {
     border: none;
 }
 
+.upNext {
+    height: 100%;
+    justify-content: center;
+}
+
+.upNextContainer button {
+    padding: 0;
+}
+
+.upNextContainer h2,
+.upNextContainer h3 {
+    color: #fff;
+}
+
+.watchNav{
+    z-index: 2;
+}
+
+.seen {
+    color: #2ecc71;
+    font-size: 26px;
+    top: 5px;
+    left: 5px;
+    position: absolute;
+}
