--- a/app/assets/style/style.css
+++ b/app/assets/style/style.css
@@ -29,6 +29,49 @@ a {
     background-color: #141414;
 }
 
+.topBar {
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    padding: 0 60px;
+    height: 70px;
+    box-sizing: border-box;
+    min-width: 1050px;
+    transition: background-color 200ms linear;
+}
+
+.logoContainer {
+    height: 40px;
+}
+
+.logoContainer img {
+    height: 100%;
+}
+
+.navLinks {
+    display: flex;
+    list-style: none;
+}
+
+.rightItems {
+    flex:1;
+    text-align: right;
+}
+
+.rightItems i {
+    color: #fff;
+    font-size: 20px;
+    margin-left: 10px;
+}
+
+.navLinks a {
+    color: #fff;
+    font-size: 14px;
+    margin-left: 20px;
+}
+
 .signInContainer {
     background-color: #efefee;
     height: 100vh;
@@ -298,4 +341,9 @@ button i {
     top: 5px;
     left: 5px;
     position: absolute;
+}
+
+.topBar.scrolled {
+    background-color: #141414;
+    transition: background-color 200ms linear;
 }
