created pages and functions for movie tvs

--- a/app/assets/style/style.css
+++ b/app/assets/style/style.css
@@ -347,3 +347,7 @@ button i {
     background-color: #141414;
     transition: background-color 200ms linear;
 }
+
+.previewCategories h1{
+    color: #e5e5e5;
+}
